--- a/libraries/tool-tip-style.css
+++ b/libraries/tool-tip-style.css
@@ -1,11 +1,11 @@
 .d3-tip {
   line-height: 1;
   font-weight: normal;
-  font-size: 11px;
-  padding: 6px;
-  background: rgb(0, 0, 0);
+  font-size: 10px;
+  padding: 8px;
+  background: rgba(0, 0, 0, 0.65);
   color: #fff;
-  /*border-radius: 6px;*/
+  border-radius: 2px;
   pointer-events: none;
 }
 
@@ -16,11 +16,7 @@
   font-size: 10px;
   width: 100%;
   line-height: 1;
-<<<<<<< HEAD
   color: rgba(0, 0, 0, 0.65);
-=======
-  color: rgb(0, 0, 0);
->>>>>>> origin/master
   position: absolute;
   pointer-events: none;
 }
