--- a/libraries/main.css
+++ b/libraries/main.css
@@ -1,3 +1,11 @@
+/*Text styling*/
+h3 {
+	font-size:14px;
+}
+
+
+
+
 #main {
 	width: 90%;
 	margin-left:auto;
@@ -6,52 +14,100 @@
 
 /*Outer set of divs*/
 #selectorDiv{
-	border:1px solid black;
+	
 }
 #chartsDiv{
 	float: left;
 	width: 69%;
-	border:1px solid black;
+	/*border:1px solid black;*/
 }
 #textDiv{
 	float: left;
 	width:23%;
-	border:1px solid black;
+	/*border:1px solid black;*/
 }
 
-/*Common CSS for axis classes*/
-.yAxis path, .y-axis path {
-	fill: none;
-	stroke: black;
+/*Common CSS for axis classes (histogram and indicators, line chart has a separate one)*/
+.yAxis path,
+.yAxis line {
+    fill: none;
+    stroke: black;
+    shape-rendering: crispEdges;
+    stroke-width:1px;
 }
-.yAxis line, .y-axis line{
-	stroke:grey;
-	stroke-width:1px;
+.yAxis text {
+    font-family: sans-serif;
+    font-size: 9px;
 }
 
 /*Selector Div on price*/
+#productSelectPrice {
+	margin-right:40px;
+}
+#sliderContainer {
+	display:inline-block;
+}
+#sliderContainer .axis {
+  font: 10px sans-serif;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+#sliderContainer .axis line {
+  fill: none;
+  stroke: black;
+  stroke-width:1px;
+  shape-rendering:crispEdges;
+}
+#sliderContainer .axis path {
+  fill:none;
+}
+
+#sliderContainer #slider {
+  width:250px;
+  margin-left:20px;
+  margin-right:20px;
+  margin-top:-15px;
+}
+
+/*Text Div Prices*/
+#textDiv {
+	padding:2% 3% 0% 3%;
+}
 
 /*Map Div and CSS*/
 #mapOuter{
 	float: left;
-	width:59%;
+	width:60%;
 	height: 300px;
 }
 #volatilityOuter{
 	float: left;
+	width:60%;
+	/*border:1px solid black;*/
 }
-#volatilityContainer{
+/*#volatilityContainer{
 	margin: auto;
-}
+}*/
 #indicatorTextContainer {
 	float: left;
-	width:23%;
+	width:30%;
 	padding:2% 3% 0% 3%;
+	/*border:1px solid black;*/
 }
-#segmentationOuter, #passthroughOuter {
+#segmentationOuter {
 	float:left;
-	width:50%;
+	width:60%;
+	/*border:1px solid black;*/
 }
+
+#passthroughOuter {
+	float:left;
+	width:40%;
+	/*border:1px solid black;*/
+}
+
 #mapContainer{
 	width:95%;
 	height:75%;
@@ -110,6 +166,11 @@
 	height:75%;
 	margin: auto;
 }
+.lineRect {
+	fill:rgb(100,100,100);
+	fill-opacity:.2;
+	stroke:none;
+}
 .voronoi path {
   fill: none;
   stroke:none;
@@ -159,3 +220,32 @@ select:focus {
  	cursor:grab;
  	cursor:-webkit-grab;
  }
+ 
+/*Common CSS for the indicators*/
+.zoneHoverShow{
+  stroke:black;
+  stroke-width:0.2px;
+}
+.zoneHoverHide {
+  fill: none;
+  stroke:black;
+  stroke-width:0.2px;
+}
+
+.textHoverShow{
+  font-size: 16px;
+}
+.textHoverHide{
+  color: red;
+}
+
+.meanLines line{
+	stroke: black;
+	stroke-width:1px;
+}
+
+.meanCross{
+
+}
+
+/*Volatility CSS*/
