--- a/libraries/jquery-ui/jquery-ui.css
+++ b/libraries/jquery-ui/jquery-ui.css
@@ -97,8 +97,11 @@
 .ui-slider .ui-slider-handle {
 	position: absolute;
 	z-index: 2;
-	width: 15px;
-	height: 15px;
+/*	width: 15px;
+	height: 15px;*/
+	width:0px;
+	border:none;
+	height:none;
 	cursor: default;
 	-ms-touch-action: none;
 	touch-action: none;
@@ -197,7 +200,7 @@
 .ui-state-default,
 .ui-widget-content .ui-state-default,
 .ui-widget-header .ui-state-default {
-	border: 1px solid #000;
+	/*border: 1px solid #000;*/
 	/*background: #e6e6e6 url("images/ui-bg_glass_75_e6e6e6_1x400.png") 50% 50% repeat-x;*/
 	font-weight: normal;
 	/*color: #555555;*/
