--- a/Ethiopia/libraries/main.css
+++ b/Ethiopia/libraries/main.css
@@ -8,6 +8,7 @@ h3 {
 /*Position the Divs*/
 #main {
 	width: 90%;
+	height:80%;
 	margin-left:auto;
 	margin-right:auto;
 }
@@ -19,32 +20,38 @@ h3 {
 #topRow{
 	width:95%;
 	height: 400px;
+	border:5px solid red;
 }
 #mapOuter{
 	float: left;
 	width:60%;
 	height: 100%;
+	border:1px solid blue;
 }
 #textDiv{
 	float: right;
-	width:33%;
-	height: 90%;
-	/*border:1px solid black;*/
+	width:36%;
+	height: 100%;
+	padding:1% 1% 1% 1%;
+	border:1px solid blue;
 }
 #bottomRow{
 	clear: both;
 	width:95%;
 	height: 300px;
+	border:5px solid yellow;
 }
 #lineOuter{
 	float: left;
 	width:60%;
 	height: 100%;
+	border:1px solid blue;
 }
 #histOuter{
 	float: right;
-	width:33%;
-	height: 90%;
+	width:38%;
+	height: 100%;
+	border:1px solid blue;
 }
 
 /*Common CSS for axis classes (histogram and indicators, line chart has a separate one)*/
@@ -91,17 +98,14 @@ h3 {
   margin-top:-15px;
 }
 
-/*Text Div Prices*/
-#textDiv {
-	padding:2% 3% 0% 3%;
-}
+
 
 /*Map Div and CSS*/
-
 #mapContainer{
-	width:95%;
-	height:100%;
+	width:100%;
+	height:90%;
 	margin:auto;
+	border:1px solid black;
 }
 /*Map key*/
 .key path {
