--- a/Ethiopia/libraries/main.css
+++ b/Ethiopia/libraries/main.css
@@ -1,6 +1,9 @@
 /*Text styling*/
 h3 {
 	font-size:14px;
+	margin-bottom: 0px;
+	margin-top: 0px;
+	line-height: 1em;
 }
 
 
@@ -15,11 +18,13 @@ h3 {
 
 /*Outer set of divs*/
 #selectorDiv{
-	
+	width:95%;
+	padding:0% 0% 0% 0%;
+	border:1px solid blue;
 }
 #topRow{
 	width:95%;
-	height: 400px;
+	height: 300px;
 	border:5px solid red;
 }
 #mapOuter{
@@ -29,10 +34,13 @@ h3 {
 	border:1px solid blue;
 }
 #textDiv{
+	font-size:14px;
 	float: right;
 	width:36%;
-	height: 100%;
 	padding:1% 1% 1% 1%;
+	margin-bottom: 0px;
+	margin-top: 0px;
+	line-height: 1.2em;
 	border:1px solid blue;
 }
 #bottomRow{
@@ -103,7 +111,7 @@ h3 {
 /*Map Div and CSS*/
 #mapContainer{
 	width:100%;
-	height:90%;
+	height:100%;
 	margin:auto;
 	border:1px solid black;
 }
@@ -193,7 +201,7 @@ h3 {
 .state--hover {
 	stroke:red;
 }
-.stateLines {
+.townLines {
 	fill:none;
 	stroke-width: 1px;
 	stroke: rgb(150,150,150);
