--- a/Nigeria/libraries/main.css
+++ b/Nigeria/libraries/main.css
@@ -66,6 +66,17 @@ h3 {
 	border:1px solid #888888;
 }
 
+#tab2row1{
+	margin-top:3em;
+	margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+    font-size: 0.9em;
+	padding:2% 1% 1% 1%;
+    box-shadow: 0 0 0.5em #888888;
+	border:1px solid #888888;
+}
+
 /*Common CSS for axis classes (histogram and indicators, line chart has a separate one)*/
 .yAxis path,
 .yAxis line {
