--- a/Ethiopia/libraries/main.css
+++ b/Ethiopia/libraries/main.css
@@ -1,9 +1,10 @@
 /*Text styling*/
 h3 {
-	font-size:14px;
+	font-size:1.2em;
+	margin-left: 1em;
 	margin-bottom: 0px;
 	margin-top: 0px;
-	line-height: 1em;
+	line-height: 1.5em;
 }
 
 
@@ -11,55 +12,61 @@ h3 {
 /*Position the Divs*/
 #main {
 	width: 90%;
-	height:80%;
 	margin-left:auto;
 	margin-right:auto;
+	font-family: "Verdana";
 }
 
 /*Outer set of divs*/
 #selectorDiv{
 	width:95%;
-	padding:0% 0% 0% 0%;
-	border:1px solid blue;
+	background: #EEEEEE;
+	box-shadow: 0 0 5px #888888;
 }
 #topRow{
 	width:95%;
-	height: 300px;
-	border:5px solid red;
+	height: 330px;
+	/*border:5px solid red;*/
 }
 #mapOuter{
 	float: left;
 	width:60%;
 	height: 100%;
-	border:1px solid blue;
+	margin-top: 1em;
+	background: #EEEEEE;
+	box-shadow: 0 0 5px #888888;
 }
 #textDiv{
-	font-size:14px;
 	float: right;
+	margin-top: 5em;
 	width:36%;
+	font-size: 0.8em;
 	padding:1% 1% 1% 1%;
-	margin-bottom: 0px;
-	margin-top: 0px;
-	line-height: 1.2em;
-	border:1px solid blue;
+	float: right;
+	box-shadow: 0 0 0.5em #888888;
+	border:1px solid #888888;
 }
 #bottomRow{
 	clear: both;
 	width:95%;
 	height: 250px;
-	border:5px solid yellow;
+	/*border:5px solid yellow;*/
 }
 #lineOuter{
 	float: left;
 	width:60%;
 	height: 100%;
-	border:1px solid blue;
+	margin-top: 1em;
+	background: #EEEEEE;
+	box-shadow: 0 0 5px #888888;
 }
 #histOuter{
 	float: right;
 	width:38%;
 	height: 100%;
-	border:1px solid blue;
+	margin-top: 1em;
+	background: #EEEEEE;
+	box-shadow: 0 0 5px #888888;
 }
 
 #tab2row1{
@@ -71,6 +78,12 @@ h3 {
 	padding:2% 1% 1% 1%;
     box-shadow: 0 0 0.5em #888888;
 	border:1px solid #888888;
+}
+
+#productSelectPrice{
+	margin-left: 0.2em;
+	margin-top:0.2em;
+	line-height: 1em;
 }
 /*Common CSS for axis classes (histogram and indicators, line chart has a separate one)*/
 .yAxis path,
@@ -123,7 +136,7 @@ h3 {
 	width:100%;
 	height:100%;
 	margin:auto;
-	border:1px solid black;
+	/*border:1px solid black;*/
 }
 /*Map key*/
 .key path {
