--- a/Nigeria/libraries/main.css
+++ b/Nigeria/libraries/main.css
@@ -62,8 +62,8 @@ h3 {
 	font-size: 0.9em;
 	padding:0.5% 1% 1% 0.5%;
 	float: right;
-	box-shadow: 0 0 0.5em #888888;
-	border:1px solid #888888;
+	/*box-shadow: 0 0 0.5em #888888;*/
+	/*border:1px solid #888888;*/
 }
 
 #tab2row1{
@@ -159,11 +159,11 @@ h3 {
 	display:none;
 }
 .key line {
-	stroke:white;
+	stroke:none;
 	shape-rendering:crispEdges;
 }
 .key text {
-	font-size:12px;
+	font-size:.8em;
 }
 
 .states{
