--- a/Ethiopia/libraries/main.css
+++ b/Ethiopia/libraries/main.css
@@ -189,6 +189,20 @@ h3 {
 	fill:none;
 }
 
+
+.activeDot{
+
+}
+
+.activeLine{
+	stroke:rgb(50,50,50);
+	stroke-width:1.5px,
+	opacity:1
+}
+
+
+
+
 /*Hist div and CSS*/
 #histChartContainer{
 	width:95%;
