--- a/Ethiopia/libraries/main.css
+++ b/Ethiopia/libraries/main.css
@@ -22,8 +22,17 @@ h3 {
 /*Outer set of divs*/
 #selectorDiv{
 	width:95%;
+	height:2.5vw;
 	background: #EEEEEE;
 	box-shadow: 0 0 5px #888888;
+}
+#productSelectPrice{
+	height:85%;
+	width:15%;
+	margin-left: 0.2em;
+	margin-top:0.2em;
+	font-size: 1.8vmin;
+	line-height: 2vmin;
 }
 #topRow{
 	width:95%;
@@ -85,11 +94,7 @@ h3 {
 	border:1px solid #888888;
 }
 
-#productSelectPrice{
-	margin-left: 0.2em;
-	margin-top:0.2em;
-	line-height: 1em;
-}
+
 /*Common CSS for axis classes (histogram and indicators, line chart has a separate one)*/
 .yAxis path,
 .yAxis line {
@@ -105,10 +110,9 @@ h3 {
 
 /*Selector Div on price*/
 #productSelectPrice {
-	margin-right:40px;
+	margin-left:0.5em;
+	margin-top: :5px;
 }
-
-
 
 
 /*Map Div and CSS*/
@@ -253,11 +257,13 @@ h3 {
 	pointer-events:none;
 }
 select:focus {
+
 	border: 1px solid #ccc;
   	box-shadow: none;
   	outline: 0 none;
 }
 .ui-state-focus {
+	margin-top: :1em;
 	border: 1px solid #000;
   	box-shadow: none;
   	outline: 0 none;
