--- a/Ethiopia/libraries/main.css
+++ b/Ethiopia/libraries/main.css
@@ -16,15 +16,16 @@ h3 {
 	width: 90%;
 	margin-left:auto;
 	margin-right:auto;
-	font-family: "Verdana";
+	font-family: "Helvetica";
 }
 
 /*Outer set of divs*/
 #selectorDiv{
 	width:95%;
-	height:2.5vw;
-	background: #EEEEEE;
-	box-shadow: 0 0 5px #888888;
+	height:2.5vw;	
+	margin-left:2px;
+	/*background: #EEEEEE;*/
+	/*box-shadow: 0 0 5px #888888;*/
 }
 #productSelectPrice{
 	height:85%;
@@ -37,6 +38,7 @@ h3 {
 #topRow{
 	width:95%;
 	height: 25vw;
+	margin-left:2px;
 	/*border:5px solid red;*/
 }
 #mapOuter{
@@ -56,13 +58,14 @@ h3 {
 	line-height: 1.5vmax;
 	padding:1% 1% 1% 1%;
 	float: right;
-	box-shadow: 0 0 5px #888888;
+	/*box-shadow: 0 0 5px #888888;*/
 	/*border:1px solid #888888;*/
 	
 }
 #bottomRow{
 	clear: both;
 	width:95%;
+	margin-left:2px;
 	height: 15vw;
 	/*border:5px solid yellow;*/
 }
@@ -154,6 +157,7 @@ h3 {
 	stroke-linejoin:round;
 	stroke-linecap:round;
 	transition: stroke 500ms;
+	pointer-events:none;
 }
 
 /*.region-boundary-small {
@@ -163,21 +167,26 @@ h3 {
 	stroke-linejoin:round;
 	stroke-linecap:round;
 }*/
-
+.tab-content {
+	overflow:none !important;
+}
 .boundary-hover {
 	fill:none;
 	stroke:DarkGrey;
 	stroke-width:0.5px;
+	pointer-events:none;
 }
 .boundary-hover-show {
 	stroke:green;
 	fill:none;
 	stroke-width:2.5px;
+	pointer-events:none
 
 }
 .boundary-hover-hide {
 	stroke:none;
 	fill:none;
+	pointer-events:none
 }
 
 /*Hist div and CSS*/
@@ -243,8 +252,8 @@ h3 {
 }
 .natLine {
 	fill:none;
-	stroke: green;
-	stroke-width: 3px;
+	/*stroke: green;*/
+	stroke-width: 1.5px;
 	opacity: 1;
 }
 
